# TeamTracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
For later use/: headers.h
For later use/old src/: Slower selection system (bad ).cpp  switchtesting.cpp
include/: Competitor.h  DataManager.h  Event.h  GUI.h  Menu.h  Team.h  headers.h
lib/pkgconfig/: ftxui.pc
old/: DataManager.h  Menu.h  Team.h
src/: DataManager.cpp  GUI.cpp  Menu.cpp  UI.cpp  dropdown.cpp  logo.info  main.cpp  switchtesting.cpp  tabs.cpp  updatedswitching(better).cpp
temp/: linuxtasks.json  task.jsonc  task.txt  tasks.json
